# vlc-test

./: README.md  pyproject.toml
src/vlc_test/: __init__.py  __main__.py  cmd.py
