[project]
name = "vlc-test"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Atsushi Ota", email = "atsushi.ota@bosco-tech.com" }
]
dependencies = ["click~=8.1.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
vlc = "python -m vlc_test"